[package]
name = "utc-dt"
version = "0.1.4"
authors = ["Reece Kibble <reecek@uniciant.com>"]
categories = ["date-and-time", "no-std", "parsing"]
keywords = ["time", "datetime", "date", "utc", "epoch"]
description = "Simple, fast and small UTC date, timestamp and datetime library for Rust."
documentation = "https://docs.rs/utc-dt"
repository = "https://github.com/uniciant/utc-datetime"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"
exclude = [".git*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["anyhow/std"]

[dependencies]
anyhow = { version = "1", default-features = false }
derive_more = { version = "0.99", features = ["add", "mul", "from", "into"] }
