[package]
name = "utc-dt"
version = "0.3.0"
authors = ["Reece Kibble <reecek@uniciant.com>"]
categories = ["date-and-time", "no-std", "parsing"]
keywords = ["time", "datetime", "date", "utc", "epoch"]
description = "Simple, fast and small UTC date, timestamp and datetime library for Rust."
documentation = "https://docs.rs/utc-dt"
repository = "https://github.com/uniciant/utc-datetime"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"
exclude = [".git*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "serde"]
std = [
    "alloc",
    "anyhow/std",
    "serde/std",
]
nightly = []
alloc = ["serde/alloc"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
# TODO not wrapping thiserror_core https://github.com/rust-lang/rust/issues/103765
# Releasing in stable rust 1.81.0, 5th september!
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0", default-features = false }
