[package]
name = "utc-dt"
version = "0.3.1"
authors = ["Reece Kibble <reecek@uniciant.com>"]
categories = ["date-and-time", "no-std", "parsing"]
keywords = ["time", "datetime", "date", "utc", "epoch"]
description = "Simple, fast and small UTC date, timestamp and datetime library for Rust."
documentation = "https://docs.rs/utc-dt"
repository = "https://github.com/uniciant/utc-datetime"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"
readme = "README.md"
exclude = [".git*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "alloc",
    "serde/std",
]
alloc = ["serde/alloc"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
